--- a/index.css
+++ b/index.css
@@ -44,3 +44,23 @@
   fill:steelblue;
   opacity: 10;
 }
+
+.tooltips{
+  position: absolute;
+  opacity: .9;
+  padding: 0px;
+  background-color: #e4e8f0;
+  color: steelblue;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serifs;
+  font-size: 19px;
+}
+.tooltips ::after{
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 20%;
+   margin-left:-15px;
+  border-width:10px;
+  border-style: solid;
+  border-color: #e4e8f0 transparent transparent  transparent;
+}
